--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,8 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+A simple recipe manager built in Ruby on Rails, using Bootstrap.
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+To get started:
+- Run 'brew services start postgresql' in terminal.
+- Run 'bundle install'.
+- Run 'rails s' to start the server.
